--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 
   <body>
     <div class="mirador-wrapper">
-      
-      <h1>Example, embedded mirador</h1>
-      <a href="#">link</a>
+      <header>
+      <h1>Example, embedded mirador</h1>  </header>
+      <nav><a href="#">link</a> </nav>
     <div id="app"></div>
     </div>
 
